// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Devices Component > renders correctly 1`] = `
.emotion-0 {
  min-height: 30px;
}

.emotion-0 .MuiSvgIcon-root {
  margin-left: 8px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  --IconButton-hoverBg: rgba(0, 0, 0, 0.04);
  padding: 5px;
  font-size: 1.125rem;
}

.emotion-2::-moz-focus-inner {
  border-style: none;
}

.emotion-2.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-2 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-2:hover {
  background-color: var(--IconButton-hoverBg);
}

@media (hover: none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-2.MuiIconButton-loading {
  color: transparent;
}

.emotion-3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.25rem;
}

.emotion-6 {
  display: grid;
  grid-template-columns: 200px 1fr;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-bottom: 16px;
}

.emotion-6>.flexbox.column>* {
  height: 20px;
}

.emotion-6 .barchart .MuiLinearProgress-root {
  background-color: #bdbdbd;
}

.emotion-6 .barchart .color-bdbdbd .MuiLinearProgress-barColorPrimary {
  background-color: #bdbdbd;
}

.emotion-6 .barchart .color-337a87 .MuiLinearProgress-barColorPrimary {
  background-color: #337a87;
}

.emotion-6 .barchart .color-a31773 .MuiLinearProgress-barColorPrimary {
  background-color: #a31773;
}

.emotion-6 .barchart .color-00859e .MuiLinearProgress-barColorPrimary {
  background-color: #00859e;
}

.emotion-6 .barchart .color-14cfda .MuiLinearProgress-barColorPrimary {
  background-color: #14cfda;
}

.emotion-6 .barchart .color-9bfff0 .MuiLinearProgress-barColorPrimary {
  background-color: #9bfff0;
}

.emotion-6 .barchart .color-d5d5d5 .MuiLinearProgress-barColorPrimary {
  background-color: #d5d5d5;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 1fr max-content;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-7.indicating {
  grid-template-columns: min-content 1fr max-content;
  -webkit-column-gap: 8px;
  column-gap: 8px;
}

.emotion-8 {
  position: relative;
  overflow: hidden;
  display: block;
  height: 4px;
  z-index: 0;
  background-color: rgb(167, 202, 237);
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-9 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear;
  transition: transform 0.2s linear;
  transform-origin: left;
  background-color: #1976d2;
  -webkit-transition: -webkit-transform .4s linear;
  transition: transform .4s linear;
}

.emotion-10 {
  gap: 16px;
}

.emotion-11 {
  margin: auto;
  margin-left: 0;
}

.emotion-11:hover svg {
  color: #1565c0;
}

.emotion-12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
  color: #1976d2;
}

.emotion-12.read {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-13 {
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 1px dashed #1976d2;
  border-radius: 50%;
}

.emotion-13.read {
  border-color: rgba(0, 0, 0, 0.38);
}

.emotion-13:hover {
  border-color: #1565c0;
}

.emotion-14 {
  font-size: 1rem;
  cursor: pointer;
}

<div>
  <div
    class="dashboard margin-bottom-large"
  >
    <div
      class="widget chart-widget"
    >
      <div
        class="margin-bottom-small"
      >
        <div
          class="flexbox space-between margin-bottom-small"
        >
          <div
            class="flexbox align-items-center emotion-0"
          >
            Software distribution
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-1"
              data-testid="BarChartIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 9h4v11H4zm12 4h4v7h-4zm-6-9h4v16h-4z"
              />
            </svg>
          </div>
          <div
            class="flexbox align-items-center"
            style="z-index: 1;"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-2"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-3"
                data-testid="SettingsIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
                />
              </svg>
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-2"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-3"
                data-testid="ClearIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="flexbox space-between slightly-smaller"
        >
          <div>
            artifact_name
          </div>
          <div>
            All devices
          </div>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="flexbox column"
        >
          <div
            class="clickable emotion-7 "
            title="undefined"
          >
            <div
              class="text-overflow"
            >
              undefined
            </div>
            <div>
              2
            </div>
          </div>
        </div>
        <div
          class="flexbox column"
        >
          <div
            class="clickable flexbox column barchart"
            style="justify-content: center;"
            title="undefined"
          >
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate color-337a87 emotion-8"
              role="progressbar"
              style="height: 8px;"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate emotion-9"
                style="transform: translateX(-100%);"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="widget"
    >
      <div
        class="flexbox align-items-center  emotion-10"
        style="align-items: end;"
      >
        <div
          class="relative flexbox emotion-11  "
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium emotion-12"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <div
            class="emotion-13 "
          />
        </div>
      </div>
      <div
        class="flexbox centered muted emotion-14"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-1"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
        <span
          class="emotion-14"
        >
          add a widget
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Devices Component > renders correctly for non-enterprise 1`] = `
.emotion-0 {
  gap: 16px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  max-width: 100%;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  line-height: 1.5;
  color: rgba(0, 0, 0, 0.87);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: unset;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  cursor: pointer;
  background-color: #f7fafb;
  color: rgba(0, 0, 0, 0.38);
  text-transform: uppercase;
  background-color: #f7fafb;
  color: rgba(0, 0, 0, 0.38);
  text-transform: uppercase;
}

.emotion-1::-moz-focus-inner {
  border-style: none;
}

.emotion-1.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-1 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-1.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-1 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-1 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #1565c0;
}

.emotion-1 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #7b1fa2;
}

.emotion-1 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-1 .MuiChip-icon {
  margin-left: 5px;
  margin-right: -6px;
}

.emotion-1 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(0, 0, 0, 0.26);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-1 .MuiChip-deleteIcon:hover {
  color: rgba(0, 0, 0, 0.4);
}

.emotion-1 .MuiChip-icon {
  color: #616161;
}

.emotion-1:hover {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-1.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.2);
}

.emotion-1:active {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
}

.emotion-1:hover {
  font-weight: bold;
}

.emotion-1:hover {
  font-weight: bold;
}

.emotion-2 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 12px;
  padding-right: 12px;
  white-space: nowrap;
}

.emotion-3 {
  margin: auto;
  margin-left: 0;
}

.emotion-3:hover svg {
  color: #1565c0;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
  color: #1976d2;
}

.emotion-4.read {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-5 {
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 1px dashed #1976d2;
  border-radius: 50%;
}

.emotion-5.read {
  border-color: rgba(0, 0, 0, 0.38);
}

.emotion-5:hover {
  border-color: #1565c0;
}

.emotion-6 {
  font-size: 1rem;
  cursor: pointer;
}

.emotion-7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <div
    class="dashboard margin-bottom-large"
  >
    <div
      class="widget"
    >
      <div
        class="flexbox align-items-center  emotion-0"
        style="align-items: end;"
      >
        <div
          class=""
          data-mui-internal-clone-element="true"
        >
          <div
            class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault emotion-1"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-2"
            >
              Enterprise
            </span>
          </div>
        </div>
        <div
          class="relative flexbox emotion-3  "
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium emotion-4"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <div
            class="emotion-5 "
          />
        </div>
      </div>
      <div
        class="flexbox centered muted emotion-6"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
        <span
          class="emotion-6"
        >
          add a widget
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Devices Component > renders correctly for too many devices 1`] = `
.emotion-0 {
  gap: 16px;
}

.emotion-1 {
  margin: auto;
  margin-left: 0;
}

.emotion-1:hover svg {
  color: #1565c0;
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
  color: #1976d2;
}

.emotion-2.read {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-3 {
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 1px dashed #1976d2;
  border-radius: 50%;
}

.emotion-3.read {
  border-color: rgba(0, 0, 0, 0.38);
}

.emotion-3:hover {
  border-color: #1565c0;
}

.emotion-4 {
  font-size: 1rem;
  cursor: pointer;
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <div
    class="dashboard margin-bottom-large"
  >
    <div
      class="widget chart-widget flexbox centered"
    >
      <div
        class="loaderContainer"
        style="width: 100%;"
      >
        <div
          class="  loader"
        >
          <span
            class="dot dot_1"
          />
          <span
            class="dot dot_2"
          />
          <span
            class="dot dot_3"
          />
          <span
            class="dot dot_4"
          />
        </div>
      </div>
    </div>
    <div
      class="widget"
    >
      <div
        class="flexbox align-items-center  emotion-0"
        style="align-items: end;"
      >
        <div
          class="relative flexbox emotion-1  "
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium emotion-2"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <div
            class="emotion-3 "
          />
        </div>
      </div>
      <div
        class="flexbox centered muted emotion-4"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
        <span
          class="emotion-4"
        >
          add a widget
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Devices Component > renders correctly while waiting for initialization 1`] = `
<div>
  <div
    class="dashboard margin-bottom-large"
  >
    <div
      class="widget chart-widget flexbox centered"
    >
      <div
        class="widgetMainContent"
      >
        <div
          class="loaderContainer"
          style="width: 100%;"
        >
          <div
            class="  loader"
          >
            <span
              class="dot dot_1"
            />
            <span
              class="dot dot_2"
            />
            <span
              class="dot dot_3"
            />
            <span
              class="dot dot_4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Devices Component > renders correctly without data retrieval 1`] = `
.emotion-0 {
  min-height: 30px;
}

.emotion-0 .MuiSvgIcon-root {
  margin-left: 8px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  --IconButton-hoverBg: rgba(0, 0, 0, 0.04);
  padding: 5px;
  font-size: 1.125rem;
}

.emotion-2::-moz-focus-inner {
  border-style: none;
}

.emotion-2.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-2 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-2:hover {
  background-color: var(--IconButton-hoverBg);
}

@media (hover: none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-2.MuiIconButton-loading {
  color: transparent;
}

.emotion-3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.25rem;
}

.emotion-6 {
  display: grid;
  grid-template-columns: 200px 1fr;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-bottom: 16px;
}

.emotion-6>.flexbox.column>* {
  height: 20px;
}

.emotion-6 .barchart .MuiLinearProgress-root {
  background-color: #bdbdbd;
}

.emotion-6 .barchart .color-bdbdbd .MuiLinearProgress-barColorPrimary {
  background-color: #bdbdbd;
}

.emotion-6 .barchart .color-337a87 .MuiLinearProgress-barColorPrimary {
  background-color: #337a87;
}

.emotion-6 .barchart .color-a31773 .MuiLinearProgress-barColorPrimary {
  background-color: #a31773;
}

.emotion-6 .barchart .color-00859e .MuiLinearProgress-barColorPrimary {
  background-color: #00859e;
}

.emotion-6 .barchart .color-14cfda .MuiLinearProgress-barColorPrimary {
  background-color: #14cfda;
}

.emotion-6 .barchart .color-9bfff0 .MuiLinearProgress-barColorPrimary {
  background-color: #9bfff0;
}

.emotion-6 .barchart .color-d5d5d5 .MuiLinearProgress-barColorPrimary {
  background-color: #d5d5d5;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 1fr max-content;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

.emotion-7.indicating {
  grid-template-columns: min-content 1fr max-content;
  -webkit-column-gap: 8px;
  column-gap: 8px;
}

.emotion-8 {
  position: relative;
  overflow: hidden;
  display: block;
  height: 4px;
  z-index: 0;
  background-color: rgb(167, 202, 237);
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-9 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear;
  transition: transform 0.2s linear;
  transform-origin: left;
  background-color: #1976d2;
  -webkit-transition: -webkit-transform .4s linear;
  transition: transform .4s linear;
}

.emotion-10 {
  gap: 16px;
}

.emotion-11 {
  margin: auto;
  margin-left: 0;
}

.emotion-11:hover svg {
  color: #1565c0;
}

.emotion-12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
  color: #1976d2;
}

.emotion-12.read {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-13 {
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 1px dashed #1976d2;
  border-radius: 50%;
}

.emotion-13.read {
  border-color: rgba(0, 0, 0, 0.38);
}

.emotion-13:hover {
  border-color: #1565c0;
}

.emotion-14 {
  font-size: 1rem;
  cursor: pointer;
}

<div>
  <div
    class="dashboard margin-bottom-large"
  >
    <div
      class="widget chart-widget"
    >
      <div
        class="margin-bottom-small"
      >
        <div
          class="flexbox space-between margin-bottom-small"
        >
          <div
            class="flexbox align-items-center emotion-0"
          >
            Software distribution
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-1"
              data-testid="BarChartIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 9h4v11H4zm12 4h4v7h-4zm-6-9h4v16h-4z"
              />
            </svg>
          </div>
          <div
            class="flexbox align-items-center"
            style="z-index: 1;"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-2"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-3"
                data-testid="SettingsIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
                />
              </svg>
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-2"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-3"
                data-testid="ClearIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="flexbox space-between slightly-smaller"
        >
          <div>
            artifact_name
          </div>
          <div>
            All devices
          </div>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="flexbox column"
        >
          <div
            class="clickable emotion-7 "
            title="undefined"
          >
            <div
              class="text-overflow"
            >
              undefined
            </div>
            <div>
              2
            </div>
          </div>
        </div>
        <div
          class="flexbox column"
        >
          <div
            class="clickable flexbox column barchart"
            style="justify-content: center;"
            title="undefined"
          >
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="100"
              class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate color-337a87 emotion-8"
              role="progressbar"
              style="height: 8px;"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate emotion-9"
                style="transform: translateX(0%);"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="widget"
    >
      <div
        class="flexbox align-items-center  emotion-10"
        style="align-items: end;"
      >
        <div
          class="relative flexbox emotion-11  "
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium emotion-12"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <div
            class="emotion-13 "
          />
        </div>
      </div>
      <div
        class="flexbox centered muted emotion-14"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-1"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
        <span
          class="emotion-14"
        >
          add a widget
        </span>
      </div>
    </div>
  </div>
</div>
`;
